[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Loot/Weapons/knife.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Equipment/Weapons/Melee/knife/Knife.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.12664
height = 9.04144

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.3
step = 0.02
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, -5, 0, 0, 0, 0, 15, -0.0263678, -0.614105, 0.0305311, -0.614105, 15, -0.0264877, 0.219227, 0.05, 0, 0, -0.0654654, 11.9418, 0.25, 0 ),
"times": PoolRealArray( 0, 0.02, 0.0804912, 0.15, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.05, 0, 0.05, 0 ),
"times": PoolRealArray( 0, 0.02, 0.15, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 90, 0, -54, 0.123512, 8.2824, 95.2193, -0.0735523, 0.833328, 0.0680012, -5, 25.9368, -0.0305311, 35.1157, 0.0305311, -23.2176, 0, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.02, 0.191514, 0.235922, 0.3 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.04 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_swoosh"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "MultiStab"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -10, -0.025, 0, 0.025, 0, 15, -0.025, 0, 0.025, 0, -10, -0.025, 0, 0.025, 0, 18.5, -0.025, 0, 0.025, 0, -10, -0.025, 0, 0.025, 0, 17, -0.025, 0, 0.025, 0, -10, -0.025, 0, 0.025, 0, 15, -0.025, 0, 0.025, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4, 0.6, 0.7, 0.9, 1, 1.2, 1.3, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 5, -0.025, 0, 0.025, 0, 0, -0.025, 0, 0.025, 0, -7, -0.025, 0, 0.025, 0, 0, -0.025, 0, 0.025, 0, -3, -0.025, 0, 0.025, 0, 0, -0.025, 0, 0.025, 0, 3, -0.025, 0, 0.025, 0, 0, -0.025, 0, 0.025, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4, 0.6, 0.7, 0.9, 1, 1.2, 1.3, 1.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 80, -0.025, 0, 0.025, 0, 80, -0.025, 0, 0.025, 0, 90, -0.025, 0, 0.025, 0, 110, -0.025, 0, 0.025, 0, 100, -0.025, 0, 0.025, 0, 90, -0.025, 0, 0.025, 0, 90, -0.025, 0, 0.025, 0, 80, -0.025, 0, 0.025, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.4, 0.6, 0.7, 0.9, 1, 1.2, 1.3, 1.5 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_swoosh"
}, {
"args": [  ],
"method": "play_swoosh"
}, {
"args": [  ],
"method": "play_swoosh"
}, {
"args": [  ],
"method": "play_swoosh"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Knife" type="Area2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="WeaponSprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0, -5 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )

[node name="AttackCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.45939 )
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Attack = SubResource( 2 )
anims/MultiStab = SubResource( 4 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Knife_body_entered"]
